add limit of laod images and load more images when page finished

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
     <!-- Title -->
     <div class="loader" id="loader">
-        <img src="loder.svg" alt="Loading" hidden>
+        <img src="loder.svg" alt="Loading" >
     </div>
 
     <!-- Image Container -->
